--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -59,7 +59,7 @@ javadoc.windowtitle=
 jaxbwiz.gensrc.classpath=${libs.jaxb.classpath}
 jaxbwiz.xjcdef.classpath=${libs.jaxb.classpath}
 jaxbwiz.xjcrun.classpath=${libs.jaxb.classpath}
-main.class=knownerrorfinder.KnownErrorFinder
+main.class=knownerrorfinder.KnownErrorFinder1
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
