--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -14,6 +14,7 @@ build.generated.sources.dir=${build.dir}/generated-sources
 build.sysclasspath=ignore
 build.test.classes.dir=${build.dir}/test/classes
 build.test.results.dir=${build.dir}/test/results
+compile.on.save.unsupported.jaxb=true
 # Uncomment to specify the preferred debugger connection transport:
 #debug.transport=dt_socket
 debug.classpath=\
@@ -29,9 +30,13 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=\
     ${libs.JAXB-ENDORSED.classpath}
 excludes=
+file.reference.JTattoo-1.6.11.jar=JTattoo-1.6.11.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${libs.Synthetica.classpath}:\
+    ${file.reference.JTattoo-1.6.11.jar}:\
+    ${libs.beans-binding.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
