--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -67,7 +67,7 @@ javadoc.windowtitle=
 jaxbwiz.gensrc.classpath=${libs.jaxb.classpath}
 jaxbwiz.xjcdef.classpath=${libs.jaxb.classpath}
 jaxbwiz.xjcrun.classpath=${libs.jaxb.classpath}
-main.class=knownerrorfinder.Theme
+main.class=Frames.Theme
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
