--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,9 +35,7 @@ file.reference.JTattoo-1.6.11.jar=JTattoo-1.6.11.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.Synthetica.classpath}:\
-    ${file.reference.JTattoo-1.6.11.jar}:\
-    ${libs.beans-binding.classpath}
+    ${file.reference.JTattoo-1.6.11.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
